Fixed overflowing input

--- a/src/components/List/taskView.module.css
+++ b/src/components/List/taskView.module.css
@@ -82,4 +82,8 @@ h3 {
     height: 2rem;
     width: 2rem;
   }
+  .outter {
+    width: 90%;
+    min-width: 220px;
+  }
 }
